<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UML.uniritter.view.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btLoginMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:fontFamily="serif"
            android:shadowColor="#FD0000"
            android:text="@string/TituloLoginActivity"
            android:textColor="@color/black"
            android:textColorHighlight="@android:color/holo_red_light"
            app:rippleColor="#FF0000"
            app:strokeColor="@android:color/holo_red_light" />

        <Button
            android:id="@+id/btListPostsMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:fontFamily="serif"
            android:text="@string/btnListPosts"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btListCommentMain"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:fontFamily="serif"
            android:text="@string/btnListComments"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btListAlbunsMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:fontFamily="serif"
            android:text="@string/btnListAlbuns"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btListPhotoMain"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:fontFamily="serif"
            android:text="@string/btnListPhotos"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btListTodosMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:fontFamily="serif"
            android:text="@string/btnListTodos"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btListUserMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:fontFamily="serif"
            android:text="@string/btnListUsers"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="serif"
        android:text="comp mobile"
        android:textColor="#000000"
        android:textSize="36dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>