<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/LLRVUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_secondary"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/RLRVUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvIdUserRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvIdUserPerfil"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tvIdUserRV"
                android:text=" | "
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvNomeUserRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/pipe"
                android:text="@string/tvNomeUserPerfil"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvLoginUserRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLoginUserPerfil"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>